# context-graph-rag

./: .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  setup.sh
api/: router.py  schemas.py  websocket.py
data/: synthetic_factory.py
docs/: context_graph_deep_dive.md  notes.md  pipeline_walkthrough.md
domain/: enums.py  models.py
frontend/: app.js  graph-viz.js  index.html  styles.css
repositories/: context_repo.py  graph_repo.py  llm_repo.py
services/: basic_graph_rag.py  context_graph_rag.py  evaluation.py  rag_factory.py
tests/: test_all.py
